# emskin

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_cn.md  release-please-config.json
.claude/skills/emskin-patterns/: SKILL.md
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/effect-core/: CLAUDE.md  Cargo.toml
crates/effect-core/src/: chain.rs  ctx.rs  effect.rs  element.rs  handle.rs  lib.rs  render.rs
crates/effect-plugins/: CLAUDE.md  Cargo.toml
crates/effect-plugins/src/: bitmap_font.rs  cursor_trail.rs  jelly_cursor.rs  lib.rs  measure.rs  recorder.rs  skeleton.rs  splash.rs  workspace_bar.rs
crates/emez/: CLAUDE.md  Cargo.toml
crates/emez/src/: handlers.rs  main.rs  state.rs
crates/emskin/: CLAUDE.md  Cargo.toml
crates/emskin-bar/: CLAUDE.md  Cargo.toml
crates/emskin-bar/src/: main.rs  render.rs  state.rs  workspace.rs
crates/emskin-dbus/: CLAUDE.md  Cargo.toml
crates/emskin-dbus-proxy/: Cargo.toml
crates/emskin-dbus-proxy/src/: main.rs
crates/emskin-dbus/src/: fcitx.rs  lib.rs
crates/emskin-dbus/src/broker/: io.rs  mod.rs
crates/emskin-dbus/src/dbus/: encode.rs  message.rs  mod.rs
crates/emskin-dbus/src/fcitx/: mod.rs
crates/emskin-dbus/src/proxy/: cmsg.rs  mod.rs
crates/emskin-dbus/src/rules/: cursor.rs
crates/emskin-dbus/tests/: cursor_rewrite.rs
crates/emskin/assets/: emskin.desktop
crates/emskin/docs/: ime-design.md
crates/emskin/src/: apps.rs  capture.rs  clipboard.rs  clipboard_dispatch.rs  clipboard_wl.rs  clipboard_x11.rs  cursor_x11.rs  dbus_broker.rs  focus.rs  grabs.rs  input.rs  lib.rs  main.rs  mirror_render.rs  recording.rs  state.rs  tick.rs  utils.rs  winit.rs
crates/emskin/src/dbus_broker/: mod.rs
crates/emskin/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  pointer_constraints.rs  seat.rs  xdg_shell.rs  xwayland.rs
crates/emskin/src/ipc/: connection.rs  dispatch.rs  messages.rs  mod.rs
crates/emskin/src/protocols/: workspace.rs
crates/emskin/src/state/: dbus.rs  effects.rs  emacs.rs  focus.rs  ime.rs  mod.rs  workspace.rs  xwayland.rs
crates/emskin/src/xwayland_satellite/: mod.rs  sockets.rs  spawn.rs  watch.rs
crates/emskin/tests/: e2e_capture.rs  e2e_clipboard_wayland.rs  e2e_clipboard_wayland_no_data_control.rs  e2e_clipboard_x11.rs  e2e_smoke.rs  xwayland_satellite.rs  xwayland_satellite_watch.rs
crates/emskin/tests/common/: mod.rs
demo/: demo.py
docs/: clipboard-flows.md  clipboard-protocols.md
eafvil/: Cargo.toml
eafvil/src/: apps.rs  clipboard.rs  clipboard_x11.rs  input.rs  main.rs  state.rs  winit.rs
eafvil/src/grabs/: mod.rs
eafvil/src/handlers/: compositor.rs  mod.rs  xdg_activation.rs  xdg_shell.rs  xwayland.rs
eafvil/src/ipc/: messages.rs
elisp/: eaf-eafvil.el  emskin-app.el  emskin-jelly.el  emskin-record.el  emskin.el
emskin/: CLAUDE.md  Cargo.toml
emskin/src/: apps.rs  clipboard_dispatch.rs  clipboard_x11.rs  crosshair.rs  input.rs  lib.rs  main.rs  skeleton.rs  splash.rs  state.rs  tick.rs  utils.rs  winit.rs  workspace_bar.rs
emskin/src/handlers/: compositor.rs  dmabuf.rs  layer_shell.rs  mod.rs  xdg_activation.rs  xdg_shell.rs  xwayland.rs
emskin/src/ipc/: connection.rs  dispatch.rs  messages.rs  mod.rs
tests/elisp/: emskin-app-tests.el
