[workspace]
resolver = "2"
members = ["crates/*"]
# `cargo build` / `cargo run -p emskin` only rebuilds members in the target's
# dep graph. emskin-bar is a sibling binary (not a dep) so it would stay
# stale; include it here so the unqualified cargo commands always rebuild it
# alongside emskin.
default-members = ["crates/emskin", "crates/emskin-bar"]

[workspace.package]
version = "0.3.0" # x-release-please-version
edition = "2021"
authors = ["Lee <loyalpartner@163.com>"]
license = "GPL-3.0"
repository = "https://github.com/emskin/emskin"

[workspace.dependencies]
smithay = { git = "https://github.com/emskin/smithay.git", branch = "emskin-patches", default-features = false, features = [
    "backend_winit",
    "backend_drm",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
cosmic-text = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[profile.release]
lto = true
