[package]
name = "emskin"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
winit_crate = { package = "winit", version = "0.30", default-features = false }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
cosmic-text = "0.18"

[dependencies.smithay]
git = "https://github.com/loyalpartner/smithay.git"
branch = "emskin-patches"
default-features = false
features = [
    "backend_winit",
    "backend_drm",
    "wayland_frontend",
    "desktop",
    "xwayland",
]
