[package]
name = "emskin-dbus-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin bin wrapper around the emskin-dbus library — launched by emskin at startup"

[[bin]]
name = "emskin-dbus-proxy"
path = "src/main.rs"

[dependencies]
emskin-dbus = { path = "../emskin-dbus" }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
